--- a/quem.html
+++ b/quem.html
@@ -11,10 +11,10 @@
     <h1>Carta de Apresentação</h1>
         <p>Olá, meu nome é Ian Alexander e sou estudante de ensino médio integrado à desenvolvimento e análise de sistemas pelo SENAI. Atualmente me encontro no terceiro e último ano dos estudos básicos, aspirando entrar na UFSC para o curso de Ciências Econômicas <br>
         Turma: 3B° Idade: 17</p>
-    <h1>Cronograma de Estudos</h1>
+    <h1>Cronograma de Estudos e Curriculum Vitae</h1>
     </div>
     <img src="images/Cronograma.png" alt="cronograma" style="width:929px;">
-    <img src="images/jamie-vardy-vardy.gif" alt="" style="width:800px; margin: 50px;">
+    <img src="images/Capturar.JPG" alt="" style="width:800px; margin: 50px;">
     <style>
         .texto {
             text-align: justify;
