--- a/index.html
+++ b/index.html
@@ -5,25 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Background Change Automatic - Sagar Developer</title>
+    <title>Portfólio 2023 - Ian Alexander Amaral Belivuk</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="Section_top">
         <div class="content">
-            <h1 id="Portfólio">Portfólio 2023</h1>
+            <h1 id="Portfólio">Portfólio 2023 - Ian Alexander Amaral Belivuk</h1>
             <a href="quem.html">Quem sou eu?</a>
             <a href="antigos.html">Antigos portfólios</a>
             <a href="https://br.linkedin.com/in/ian-alexander-amaral-belivuk-b9449a231">LinkedIn</a>
             <a href="https://github.com/IanAAB">GitHub</a>
             <br><br><br>
-            <a href="">Humanas</a>
-            <a href="">Matemática</a>
-            <a href="">Linguagens</a>
-            <a href="">Natureza</a>
-            <br><br><br>
-            <a href="">Técnico</a>
+            <a href="humanas.html">Humanas</a>
+            <a href="matematica.html">Matemática</a>
+            <a href="linguagens.html">Linguagens</a>
+            <a href="natureza.html">Natureza</a>
+            <a href="tecnico.html">Técnico</a>
         </div>
     </div> 
 </body>
