--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <a href="linguagens.html">Linguagens</a>
             <a href="natureza.html">Natureza</a>
             <a href="tecnico.html">Técnico</a>
+            <br><br><br>
+            <a href="porescolha.html">Por escolha do aluno</a>
         </div>
     </div> 
 </body>
