--- a/quem.html
+++ b/quem.html
@@ -13,8 +13,8 @@
         Turma: 3B° Idade: 17</p>
     <h1>Cronograma de Estudos e Curriculum Vitae</h1>
     </div>
-    <img src="images/Cronograma.png" alt="cronograma" style="width:929px;">
-    <img src="images/Capturar.JPG" alt="" style="width:800px; margin: 50px;">
+    <img src="images/Cronograma.png" alt="cronograma" style="width:900px;">
+    <img src="images/Capturar.PNG" alt="" style="width:800px; margin: 50px;">
     <style>
         .texto {
             text-align: justify;
