--- a/tecnico.html
+++ b/tecnico.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linguagens</title>
+    <title>Técnico</title>
 </head>
 <body>
 <h2>Atividades Professor Bruno</h2>
-  <p><a href=""></a></p>
-  <p><a href=""></a></p>
-  <p><a href=""></a></p>
-  <p><a href=""></a></p>
+  <p>Processo de desenvolvimento de <a href=""> Software</a></p>
+  <p>Diagrama de Caso de Uso da <a href="https://lucid.app/lucidchart/69b75ab7-1668-40e2-b699-40cc129e9480/edit?invitationId=inv_a92c83ac-fe76-4022-b679-e35f6542dce7">SA</a></p>
+  <p>Diagrama de Classe da <a href="https://drive.google.com/file/d/1VlpzHzYCHxttFreU8p0ht-8U4W9LSGq2/view?usp=share_link">SA</a></p>
   <p>Teoria da <a href="https://drive.google.com/file/d/1IagCMpJLzr6sJLbTDfbgZuNTgrg7t_MA/view"> POO</a></p>
-  <p><a href=""></a></p>
-  <p><a href=""></a></p>
-  <p><a href=""></a></p>
+  <p>Protótipo da SA - <a href="https://www.figma.com/file/yf0Kfu4laeuqpgfWEPtozL/Agenda-S?type=design&node-id=0-1&mode=design"> Figma</a></p>
+  <p>Telas do App da<a href="https://www.figma.com/proto/yf0Kfu4laeuqpgfWEPtozL/Agenda-S?type=design&node-id=1-10&t=C8Qtg1uV4iCli3yc-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A10&mode=design">SA</a></p>
+  <p>App Completo da <a href="https://github.com/Senai-SC-CTAI/SA_2023_3B_Agenda-S">SA</a></p>
 <h2>Atividades Professor Charles</h2>
   <p>Atividade de <a href="https://docs.google.com/document/d/1XezXpWmbT8oSZSb9KYY1_n-YCRB7DcKfVcQ8zaawAI4/edit">Virtualização</a> </p>
   <p>Prints das <a href="https://drive.google.com/file/d/15UmMu7EOBcJp6YODlEnblIpT7-knAQfE/view"> atividades práticas</a></p>
